kubernetes/deployment-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - image: cglotr/koran-client
          name: client
          ports:
            - containerPort: 8080
