kubernetes/deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: koran
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_PASSWORD
                  name: secret-mysql-password
          image: mysql:5.7.28
          name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
              subPath: koran
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: persistent-volume-claim
