kubernetes/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-server
spec:
  replicas: 2
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - image: arikama/koran-server
          name: server
          ports:
            - containerPort: 8080
