kubernetes/deployment-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-server
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - image: cglotr/koran-server
          name: server
          ports:
            - containerPort: 8080
