kubernetes/service-cluster-ip-client.yml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-client
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: client
  type: ClusterIP
