kubernetes/service-cluster-ip-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    component: mysql
  type: ClusterIP
