kubernetes/ingress-nginx.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: service-cluster-ip-server
              servicePort: 8080
            path: /api/?(.*)
